# DATAVIZ

./: .buildinfo  .gitignore  Makefile  README.md  _config.yml  _toc.yml  environment.yml  genindex.html  myst.yml  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
_static/: dataviz.css
data/: adults.csv  area-parreiral-uvas-sivibe.xlsx  cantores-atores.csv  crimes-pb-2015-2018.csv  estudantes-notas.csv  gdp-world-2021.csv  gestacional-peso.csv  matriz-quimica.csv  mediterranean-sea-temp-argo.csv  petr-repasse-redd-amazonia.csv  preco-combs-pb-2022-02  preco-combs-pb-2022-02.csv  random-text.txt  raw-data-hospital.txt  sales_data.csv  top10-bilheteria-cinema-2022-br.csv  top10-bilheteria-cinema-2022-us.csv
dcs/: dcs24.py  dcs24_v2.py  dcs25.py  dcs27.py
dw/: dw1a.py  dw1b.py
etc/: dataviz.yml  gcpeixoto-datavis.mplstyle  qrcode-generator.html  qrcode-generator.ipynb
ipynb/: 00-apresentacao.html  00-apresentacao.ipynb  01-historia.html  01-introducao.ipynb  01a-introducao.html  01a-introducao.ipynb  01b-historico.html  02-estetica.html  02a-historico.html  02a-historico.ipynb  03-eixos.html  03a-estetica.html  03b-percepcao.html  03b-percepcao.ipynb  04-cores.html  04-percepcao.ipynb  04a-eixos.html  05-cores.ipynb  05-lounge.html  05a-percepcao.html  06-storytelling.html  06a-cores.html  06a-cores.ipynb  07-matplotlib.ipynb  07a-lounge.html  08a-storytelling.html  09a-imersao-matplotlib.html  09a-matplotlib-imersao.html  09a-matplotlib-imersao.ipynb  10a-acvd.html  10a-acvd.ipynb  10a-ecvd1.html  10a-ecvd1.ipynb  20-dcs-quantidade.html  (+41 more)
(+292 files in other folders)
