[project]
name = "dataviz"
version = "0.1.0"
description = "Data visualization ebook."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cartopy>=0.25.0",
    "dash>=4.1.0",
    "geopandas>=1.1.3",
    "h5py>=3.16.0",
    "jupyter>=1.1.1",
    "jupyter-book>=2.1.4",
    "matplotlib>=3.10.9",
    "matplotlib-venn>=1.1.2",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "reportlab>=4.4.10",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
    "xhtml2pdf>=0.2.17",
]
